# kindlenotes2md

./: .gitignore  README.md  pyproject.toml
kindlenotes2md/: dataclasses.py  datastructures.py  htmlparsing.py  markdownoutput.py  notes.py
tests/: test_data.html  test_htmlparsing.py  test_kindlenotes2md.py  test_notes.py
