[tool.poetry]
name = "kindlenotes2md"
version = "0.1.2"
description = "Convert your kindle notes to markdown format"
authors = ["Ewan Nicolson <ewan.nicolson@gmail.com>"]
repository = "https://github.com/dataewan/kindlenotes2md"
readme="README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pyquery = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.poetry.scripts]
kindlenotes2md = "kindlenotes2md.notes:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
